// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateOutputsGraphicData > calculates dimensions and position from metadata 1`] = `
{
  "calibratedMax": 0,
  "calibratedMin": 0,
  "height": 16,
  "id": "output1",
  "width": 24,
  "wireX": 88,
  "wireY": 24,
  "x": 76,
  "y": 16,
}
`;

exports[`updateOutputsGraphicData > handles multiple outputs in line-number order 1`] = `
[
  [
    "0",
    {
      "calibratedMax": 0,
      "calibratedMin": 0,
      "height": 16,
      "id": "output1",
      "width": 24,
      "wireX": 88,
      "wireY": 24,
      "x": 76,
      "y": 16,
    },
  ],
  [
    "1",
    {
      "calibratedMax": 0,
      "calibratedMin": 0,
      "height": 16,
      "id": "output2",
      "width": 24,
      "wireX": 88,
      "wireY": 40,
      "x": 76,
      "y": 32,
    },
  ],
]
`;

exports[`updateOutputsGraphicData > positions outputs at the metadata line number 1`] = `
{
  "calibratedMax": 0,
  "calibratedMin": 0,
  "height": 16,
  "id": "output1",
  "width": 24,
  "wireX": 88,
  "wireY": 40,
  "x": 76,
  "y": 32,
}
`;
